--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.8.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
